--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main class="container">
         <section class="top d-flex justify-content-around align-items-center">
             <div class="top-left">
-                <h2>Welcome to <span class="title-blue"> AK Tech</span></h2>
+                <h2 class="top-title">Welcome to <span class="title-blue"> AK Tech</span></h2>
                 <p>AK Tech Point is the place where you find anything about web programming and services of the
                     builing your own website for your business and the promotion landing pages like this and other
                     many web services. Our all web services are in very cheap rates and our product is fully
