--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         functional,up-to-date, attractive, user friendly
                         and responsive</b>. We are make sure to providing the exact output accroding to user
                     requirements.</p>
-                <button class="btn btn-dark">View Blog</button>
-                <button class="btn btn-blue">Services</button>
+                <a href="./html/blog.html"><button class="btn btn-dark">View Blog</button></a>
+                <a href="./html/services.html"><button class="btn btn-blue">Services</button></a>
             </div>
             <div class="top-right">
                 <img src="./Imgs/logo.png" alt="">
@@ -71,25 +71,23 @@
             <h2 class="title-blue">Here are some popular blogs</h2>
             <div class="boxes d-flex">
                 <div class="box">
-                    <h4>Blog 1</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ex optio explicabo soluta unde
-                        sint, voluptates vitae. Voluptates molestiae quaerat alias ea cumque iusto quia ab, architecto
-                        aperiam suscipit adipisci.</p>
-                    <button class="btn btn-blue">Read More</button>
+                    <h4>API's</h4>
+                    <p>Fetch API is the first one on this list. It is used for performing network requests from the
+                        browser.Here are the some most useful API's.
+                    </p>
+                    <a href="./blog/api.html"><button class="btn btn-blue">Read More</button></a>
                 </div>
                 <div class="box">
-                    <h4>Blog 1</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ex optio explicabo soluta unde
-                        sint, voluptates vitae. Voluptates molestiae quaerat alias ea cumque iusto quia ab, architecto
-                        aperiam suscipit adipisci.</p>
-                    <button class="btn btn-blue">Read More</button>
+                    <h4>JS snipts</h4>
+                    <p>JavaScript is the front-end logical language use for web development as a logical language. Here
+                        are some code snipts for JS.</p>
+                    <a href="./blog/js.html"><button class="btn btn-blue">Read More</button></a>
                 </div>
                 <div class="box">
-                    <h4>Blog 1</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ex optio explicabo soluta unde
-                        sint, voluptates vitae. Voluptates molestiae quaerat alias ea cumque iusto quia ab, architecto
-                        aperiam suscipit adipisci.</p>
-                    <button class="btn btn-blue">Read More</button>
+                    <h4>PHP snipts</h4>
+                    <p>PHP is backend programming language use to write the backend of websites and web base
+                        application. here are some code snipts for php.</p>
+                    <a href="./blog/"><button class="btn btn-blue">Read More</button></a>
                 </div>
             </div>
         </section>
