--- a/html/services.html
+++ b/html/services.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Imgs/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Imgs/favicon.png" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/about-mobile.css">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/services-mobile.css">
     <title>AK Tech</title>
 </head>
 
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid ">
-                <a class="navbar-brand" href="#"><img class="nav-logo" src="./Imgs/logo_transparent.png" alt="">
+                <a class="navbar-brand" href="#"><img class="nav-logo" src="../Imgs/logo_transparent.png" alt="">
                     AK Tech</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -29,7 +29,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="./about.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         <a class="nav-link" href="./about.html">About</a>
                         <a class="nav-link active" href="#">Services</a>
                         <a class="nav-link" href="./blog.html">Blog</a>
@@ -48,10 +48,85 @@
             </div>
         </nav>
     </header>
+    <main class="container">
+        <!-- top  -->
+        <section class="top">
+            <h1 class="title-blue top-title">Here are the services that's we provide</h1>
+            <p class="top-desc">Today, there is a big challenge to building the digital product such as softwares, app
+                and web based applications. So here we provide the facility of developing the web based applications for
+                you and your businesss. </p>
 
+            <div class="boxes d-flex justify-content-between">
+                <div class="box">
+                    <img src="../Imgs/services/web.jpg" alt="">
+                    <h2 class="box-title title-blue">Web Applications</h2>
+                    <p class="box-desc">Fully responsive web application with responsive frontend, backend database,
+                        admin panel and login
+                        system.</p>
+                </div>
+                <div class="box">
+                    <img src="../Imgs/services/website.jpeg" alt="">
+                    <h2 class="box-title title-blue">Business Websites</h2>
+                    <p class="box-desc">We'll build website for your business the websites will definately help in your
+                        business and make your work easy.</p>
+                </div>
+            </div>
+            <div class="boxes d-flex justify-content-between">
+                <div class="box">
+                    <img src="../Imgs/services/landing.jpeg" alt="">
+                    <h2 class="box-title title-blue">Landing pages</h2>
+                    <p class="box-desc">We'll develop attractive and responsive landing pages for you. The landing pages
+                        use to promote your products and business.</p>
+                </div>
+                <div class="box">
+                    <img src="../Imgs/services/hosting.png" alt="">
+                    <h2 class="box-title title-blue">Hosting</h2>
+                    <p class="box-desc">We'll host your website and deploy your project into real world. We'll host your
+                        website on VPS and enable HTTPS protocol.</p>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section class="middle">
+            <h2 class="title-blue">Front-end development tools</h2>
+            <div class="tools-imgs">
+                <img src="../Imgs/html.webp" alt="">
+                <img src="../Imgs/css.webp" alt="">
+                <img src="../Imgs/js.webp" alt="">
+                <img src="../Imgs/jquery.jpeg" alt="">
+                <img src="../Imgs/boot.webp" alt="">
+            </div>
+            <h2 class="title-blue">Back-end development tools</h2>
+            <div class="tools-imgs">
+                <img src="../Imgs/php.webp" alt="">
+                <img src="../Imgs/mysql.webp" alt="">
+
+            </div>
+        </section>
+        <hr>
+        <section class="bottom d-flex justify-content-center align-items-center flex-column">
+            <h2 class="title-blue">Contact Us</h2>
+            <div class="contact-container my-4 d-flex flex-column justify-content-center align-items-center">
+                <h4>We are available here!</h4>
+                <div class="contact-icons my-3">
+                    <a href="https://www.facebook.com/profile.php?id=100008735655250" target="_blank"><img
+                            src="../Imgs/contact/facebook.svg" alt=""> </a>
+                    <a href="https://www.instagram.com/ali_khalil_26/" target="_blank"><img
+                            src="../Imgs/contact/instagram.svg" alt="">
+                    </a>
+                    <a href="https://twitter.com/ChAliKhalil1" target="_blank"><img src="../Imgs/contact/twitter.svg"
+                            alt=""> </a>
+                    <a href="https://www.linkedin.com/in/ali-khalil-b76233251/" target="_blank"><img
+                            src="../Imgs/contact/linkedin.svg" alt=""> </a>
+                    <a href="https://github.com/AliKhalil28" target="_blank"><img src="../Imgs/contact/github.svg"
+                            alt=""></a>
+                </div>
+            </div>
+        </section>
+        <hr>
+    </main>
     <footer class="footer d-flex justify-content-center align-items-center my-2">
-        <a href="#"> <img src="../Imgs/logo.png" class="footer-logo" alt=""></a> AK Tech || copyright &copy; All
-        right
+        <a href="#"> <img src="../Imgs/logo.png" class="footer-logo" alt=""></a> AK Tech || copyright &copy; All right
         reserved
     </footer>
 </body>
