--- a/html/about.html
+++ b/html/about.html
@@ -68,7 +68,7 @@
                             years</span>
                     </li>
                     <li><span class="info-title"><b>Company: </b></span><span class="info-desc">
-                            Individual</span>
+                            AK Tech</span>
                     </li>
                     <li><span class="info-title"><b>Country: </b></span><span class="info-desc">Pakistan</span>
                     </li>
