--- a/html/services.html
+++ b/html/services.html
@@ -67,7 +67,7 @@
                 <div class="box">
                     <img src="../Imgs/services/website.jpeg" alt="">
                     <h2 class="box-title title-blue">Business Websites</h2>
-                    <p class="box-desc">We'll build website for your business the websites will definately help in your
+                    <p class="box-desc">We'll build website for your business the websites will definitely help in your
                         business and make your work easy.</p>
                 </div>
             </div>
