--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h4>PHP snipts</h4>
                     <p>PHP is backend programming language use to write the backend of websites and web base
                         application. here are some code snipts for php.</p>
-                    <a href="./blog/"><button class="btn btn-blue">Read More</button></a>
+                    <a href="./blog/php.html"><button class="btn btn-blue">Read More</button></a>
                 </div>
             </div>
         </section>
