--- a/html/blog.html
+++ b/html/blog.html
@@ -55,19 +55,19 @@
                 <a href="../blog/api.html">
                     <div class="box">
                         <img src="../Imgs/blog/api.png" alt="">
-                        <h4>Most useful Api's</h4>
+                        <h5>Most useful Api's</h5>
                     </div>
                 </a>
                 <a href="../blog/js.html">
                     <div class="box">
                         <img src="../Imgs/js.webp" alt="">
-                        <h3>JavaScript code snipts</h3>
+                        <h5>JavaScript code snipts</h5>
                     </div>
                 </a>
                 <a href="../blog/php.html">
                     <div class="box">
                         <img src="../Imgs/php.webp" alt="">
-                        <h3>PHP code snipts</h3>
+                        <h5>PHP code snipts</h5>
                     </div>
                 </a>
             </div>
@@ -84,6 +84,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="../js/app.js"></script>
 
 </html>
